solc_ossfuzz_seed_corpus/test_sol/test_8dc905bc5a722bb99337581b4dd033875fffee38f15c9f641e020ecdeacff82b_be2c3998d4914f91e9a4a4640ff4f8f43d14ec27_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
contract C0 {
  receive() external virtual  payable
  {
    address l0 = address(this);
    require(((bytes11(bytes14(0x0000000000000000000000000000)) > bytes11(0x42991685342d549f9f2f80)) ? (true ? true : false) : true));
    {
      l0 = address(this);
      assert(l0 == address(this));
      uint80 l1 = (uint80(1208925819614629174706175) * uint80(1208925819614629174706175));
      bytes storage l2;
      uint168 l3 = uint168(374144419156711147060143317175368453031918731001855);
      function (function (bool) external   returns (bool, address payable, bool)) internal   returns (function (bytes24, bool, bytes16) external   returns (uint200, uint248, bytes28), int144) l4;
      (l0, l3, l2) = (msg.sender, uint168(374144419156711147060143317175368453031918731001855), bytes("000000000000000000000000000000000000000000ffffffffffffffffffffffffffffffffffffffffffffffffffffffff"));
      assert(l0 == msg.sender);
      assert(l3 == uint168(374144419156711147060143317175368453031918731001855));
      assert(keccak256(bytes(l2)) == keccak256(bytes(bytes("000000000000000000000000000000000000000000ffffffffffffffffffffffffffffffffffffffffffffffffffffffff"))));
    }
    { }
  }
  bool   s0 = false;
  int216[][][]   s1;

	function compareMemoryAndStorage(int216[][][] memory v1, int216[][][] storage v2) internal returns (bool) {
		if (v1.length != v2.length)
			return false;
		for (uint i = 0; i < v1.length; i++)

			if (!compareMemoryAndStorage(v1[i], v2[i]))

				return false;
		return true;
	}

	function compareMemoryAndStorage(int216[][] memory v1, int216[][] storage v2) internal returns (bool) {
		if (v1.length != v2.length)
			return false;
		for (uint i = 0; i < v1.length; i++)

			if (!compareMemoryAndStorage(v1[i], v2[i]))

				return false;
		return true;
	}

	function compareMemoryAndStorage(int216[] memory v1, int216[] storage v2) internal returns (bool) {
		if (v1.length != v2.length)
			return false;
		for (uint i = 0; i < v1.length; i++)

			if (v1[i] != v2[i])

				return false;
		return true;
	}
  uint8  public s2;
  constructor(int216[][][] memory i0,uint8 i1) payable  {
    s1 = i0;
    s2 *= (uint8(195) ** uint152((uint152(5708990770823839524233143877797980545530986495) | uint152(1039228222745478131970718335568090794611035036))));
    { }
  }
}
type T0 is uint224;

using {
lt0 as <, gt0 as >, leq0 as <=, geq0 as >=,
bitor0 as |, bitand0 as &, bitxor0 as ^, bitnot0 as ~,
add0 as +, sub0 as -, mul0 as *, div0 as /, mod0 as %,
eq0 as ==, neq0 as !=

} for T0 global;



function lt0(T0 x, T0 y) pure returns (bool) { return T0.unwrap(x) < T0.unwrap(y); }

function gt0(T0 x, T0 y) pure returns (bool) { return T0.unwrap(x) > T0.unwrap(y); }

function leq0(T0 x, T0 y) pure returns (bool) { return T0.unwrap(x) <= T0.unwrap(y); }

function geq0(T0 x, T0 y) pure returns (bool) { return T0.unwrap(x) >= T0.unwrap(y); }




function bitor0(T0 x, T0 y) pure returns (T0) { return T0.wrap(T0.unwrap(x) | T0.unwrap(y)); }

function bitand0(T0 x, T0 y) pure returns (T0) { return T0.wrap(T0.unwrap(x) & T0.unwrap(y)); }

function bitxor0(T0 x, T0 y) pure returns (T0) { return T0.wrap(T0.unwrap(x) ^ T0.unwrap(y)); }

function bitnot0(T0 x) pure returns (T0) { return T0.wrap(~T0.unwrap(x)); }




function add0(T0 x, T0 y) pure returns (T0) { return T0.wrap(T0.unwrap(x) + T0.unwrap(y)); }

function sub0(T0 x, T0 y) pure returns (T0) { return T0.wrap(T0.unwrap(x) - T0.unwrap(y)); }

function mul0(T0 x, T0 y) pure returns (T0) { return T0.wrap(T0.unwrap(x) * T0.unwrap(y)); }

function div0(T0 x, T0 y) pure returns (T0) { return T0.wrap(T0.unwrap(x) / T0.unwrap(y)); }

function mod0(T0 x, T0 y) pure returns (T0) { return T0.wrap(T0.unwrap(x) % T0.unwrap(y)); }



function eq0(T0 x, T0 y) pure returns (bool) { return T0.unwrap(x) == T0.unwrap(y); }

function neq0(T0 x, T0 y) pure returns (bool) { return T0.unwrap(x) != T0.unwrap(y); }



// ----
// TypeError 7407: (su1.sol:728-911): Type tuple(address,uint168,bytes memory) is not implicitly convertible to expected type tuple(address,uint168,bytes storage pointer).
// Warning 3149: (su1.sol:2161-2299): The result type of the exponentiation operation is equal to the type of the first operand (uint8) ignoring the (larger) type of the second operand (uint152) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
